# Awesome-Usenet

./: .env.example  .gitignore  README.md  ROADMAP.md  desktop_app.py  majic  mcp_server.py  pyproject.toml  render.yaml  requirements.txt  run_app.command  setup.sh
Majic Movie Selector.app/Contents/: Info.plist
app/: config.py  main.py  models.py  state.py  supervisor.py
app/agents/: a24_agent.py  afi_agent.py  anime_agent.py  bafta_agent.py  base.py  blumhouse_agent.py  boxoffice_agent.py  cannes_agent.py  criterion_agent.py  decades_agent.py  directors_agent.py  (+29 more)
data/: a24_films.json  afi100.json  anime_essentials.json  bafta_winners.json  blumhouse_films.json  boxoffice_hits.json  cannes_palme_dor.json  criterion_collection.json  decades_essentials.json  directors_spotlight.json  disney_classics.json  film_noir.json  film_registry.json  ghibli_films.json  golden_globes.json  hidden_gems.json  horror_classics.json  imdb_top250.json  korean_cinema.json  letterboxd_top.json  marvel_dc.json  metacritic_90.json  mubi_curated.json  neon_films.json  oscars_best_picture.json  pixar_films.json  plex_channel_schedule.json  releases_seed.json  rogerebert_seed.json  rottentomatoes_seed.json  scifi_essentials.json  sight_sound_top100.json  sundance_films.json  upcoming_seed.json
scripts/: install.sh  start_server.sh  test.sh
tests/: test_feedback_categories.py  test_memory_store.py  test_nzbgeek_rss.py  test_oscars_web_client.py  test_prompt_parser.py  test_radarr_client.py  test_recommender.py  test_releases_client.py  test_rogerebert_client.py  test_source_agents.py
(+61 files in other folders)
